# wmcTest

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
migrations/: env.py
src/: main.py
src/api/: services_depends.py
src/api/auth/: auth.py  database.py  manager.py  router.py  schemas.py
src/api/v1/: responses.py
src/api/v1/routers/: profile_router.py  wb_accounts_router.py
src/config/: __init__.py  loader.py  settings.py
wms_services/: __init__.py
wms_services/exceptions/: accounts_exceptions.py  base_exceptions.py
wms_services/models/: __init__.py  base_model.py  user_models.py
wms_services/repositories/: __init__.py  base_repo.py  profile_repo.py  user_repo.py  wb_accounts_repo.py
wms_services/schemas/: __init__.py  profile_schemas.py  wb_account_schema.py
wms_services/services/: __init__.py  base_service.py  profile_service.py  wb_accounts_service.py
wms_services/templates/: warehouse_links_report_template.xlsx
